--- a/ExcelToYAML.yaml
+++ b/ExcelToYAML.yaml
@@ -509,7 +509,7 @@ nodes:
           **Epic ID**: N/A
 
 
-          **Description**: Median time from emergency department arrival to time of departure from the emergency room for patients discharged from the emergency department. Endorsed by the National Quality Forum, reported to CMS. Includes any ED patient from the facilitys emergency department. Excludes transfer patients, behavioral health, patients who expired in the emergency department.
+          **Description**: Median time from emergency department arrival to time of departure from the emergency room for patients discharged from the emergency department. Endorsed by the National Quality Forum, reported to CMS. Includes any ED patient from the facility's emergency department. Excludes transfer patients, behavioral health, patients who expired in the emergency department.
 
           **Business Logic**: N/A
         domain: Executive
