--- a/bg_finance.yaml
+++ b/bg_finance.yaml
@@ -1,12 +1,12 @@
 version: 1 
 owners: 
-  groups: 
-    - glossarysuperuser
-    - uuid-mhfinance
+  users:
+  groups:
+    - MH Finance
 nodes:
   - name: Finance
     id: urn:li:glossaryNode:uuid-finance
-    description: Business Glossary for terms and metrics related to MaineHealth Finance.
+    description: Business Glossary terms and metrics related to MaineHealth Finance.
     terms:
       - name: Billed Patient Days
         id: finance-Billed-Patient-Days
@@ -74,4 +74,109 @@ nodes:
             Discharge Date - Fiscal Year: (user defined)
             Patient Type - Rollup:  Inpatient
             MS DRG: Not in 000 - Not Specified, 998 - Principal Diagnosis Invalid as Discharge Diagnosis
+        domain: Finance
+      - name: FTEs
+        id: Finance-FTEs
+        description: | 
+          **Alias**: 
+          **Type**: Metric
+          **Epic ID**: 
+          **Category**: GL/Payroll
+
+          **Description**: FTEs by LOB (Excluding Contract Labor and Intercompany)
+
+          **Business Logic**: 
+            Time Class - Time Class: Actual, Budget
+            Job Code - Job Code Group: Not in CONTRACT, CONTRACTCNA, CONTRACTDR, CONTRACTLPN, CONTRACTMIDLEVEL, CONTRACTNONCLIN, CONTRACTOTHCLIN, CONTRACTRN, CONTRACTCRNA, ICT APP, ICT DRs, ICT MedDir, ICT OtherProvider, ICT Staff
+            MR Department - Department Rollup 1 (MHMG): Physician Practices, Transitional MHMG Practices, MMC AMG, MG LOB Eliminations
+            MR Department - Department Rollup 1 (Non-MG): Not in Physician Practices, Transitional MHMG Practices, MMC AMG, MG LOB Eliminations
+            Fiscal Year - Fiscal Year: (User Defined)
+            Fiscal Month - Fiscal Month: (User Defined)
+        domain: Finance
+      - name: OR Cases
+        id: Finance-OR-Cases
+        description: |
+          **Alias**: 
+          **Type**: Metric
+          **Epic ID**: 
+          **Category**: OR Log
+
+          **Description**: Count of OR Procedures (Excluding Cath/Endo for most entities)
+
+          **Business Logic**: 
+            Surgery Start Date - Fiscal Year: (User Defined)
+            Surgery Start Date - Month: (User Defined)
+            Surgical Procedure - Name: Not Equals 0 - Not Specified
+            Log Location - Log Location (Include these Log Locations): Not in 10740601 - SMHC BID ENDO, 10740603 - SMHC KEN ENDO, 1180000424 - SMHC BID CATH LAB, 1070000019 - WCGH PROCEDURAL AREA, 11840501 - MCH CATH LAB, 10740502 - MCH Digestive Health, 10440503 - MCH OUTPATIENT SURGERY, 107406 - PBMC ENDO, 987 - FMH ENDO, 1070000001 - MMC ENDOSCOPY, 1071000997 - MMC BMC ENDO, 1071130001 - MMC CATH LABS, 118113001 - MMC EP LABS, 1071002001 - MMC MFT PROCEDURE FLOOR
+            Log Room - Log Room (MMC MFT - Surgical): Not in MMC MFT PROCEDURE ROOM 41, MMC MFT PROCEDURE ROOM 42, MMC MFT PROCEDURE ROOM 43, MMC MFT PROCEDURE ROOM 44, MMC MFT PROCEDURE ROOM 45, MMC MFT PROCEDURE ROOM 46, MMC MFT PROCEDURE ROOM 47, MMC MFT PROCEDURE ROOM 48, MMC MFT PROCEDURE ROOM 49
+            Surgical Procedure - Surgical Procedure Code (MMC MFT - Surgical): DoesNotStartWith CATHLAB
+        domain: Finance
+      - name: Billed Overnight OP Days
+        id: Finance-Billed-Overnight-OP-Days
+        description: | 
+          **Alias**: 
+          **Type**: Metric
+          **Epic ID**: 
+          **Category**: ADT
+
+          **Description**: Equivalent Days for OPs in bed past midnight
+
+          **Business Logic**: 
+            1. Based on Discharge Date
+            2. Must stay in a bed past mid-night
+            3. Patient’s final class must observation or bedded outpatient
+            4. Count of hours from time of registration as patient class bedded outpatient or observation to discharge
+            5. Exclude hours for bedded outpatients in a location that regularly recovers patients (i.e. PACU, Cath Lab, etc.)
+        domain: Finance
+      - name: Bedded OP Cases
+        id: Finance-Bedded-OP-Cases
+        description: | 
+          **Alias**: 
+          **Type**: Metric
+          **Epic ID**: 
+          **Category**: Billing
+
+          **Description**: Count of OP bedded/observation patient type
+
+          **Business Logic**: 
+            Discharge Date - Fiscal Year: (User Defined)
+            Discharge Date - Month: (User Defined)
+            SBO HAR Type: 0 - HB-Mixed
+            Patient Encounter - Is Non Zero Charge: (All)
+            UB Revenue Code - Code: (All)
+            Patient Type - Patient Type (Total): 31000001 - Bedded Outpatient, 104 - Observation
+        domain: Finance
+      - name: ED Visits
+        id: Finance-ED-Visits
+        description: | 
+          **Alias**: 
+          **Type**: Metric
+          **Epic ID**: 
+          **Category**: ADT
+
+          **Description**: Count of ED Level charges by Admit date
+
+          **Business Logic**: 
+            1. Based on Date of Service 
+            2. Patients have an "ED Arrival" Event
+            3. "Arrival Time" is in report date range
+            4. Location is determined by ED Department Location
+            5. Count 1 for each encounter (there could potentially be more than one in a day)
+            6. Excludes Urgent Care departments
+            7. Excludes Left without Being Seen (LWBS)
+            8. Excludes Clinical Decision Unit (CDU) patients
+        domain: Finance
+      - name: CMI Adjusted Discharges
+        id: Finance-CMI-Adjusted-Discharges
+        description: | 
+          **Alias**: 
+          **Type**: Metric
+          **Epic ID**: 
+          **Category**: Billing
+
+          **Description**: CMI Adjusted Discharges
+
+          **Business Logic**:
+            Case Mix Adjusted OP Discharges + Case Mix Adjusted IP Discharges
+            Template on 'Support1' Tab
         domain: Finance
